@@ -24,7 +24,7 @@
 # matches the default Vrui installation; if Vrui's installation
 # directory was changed during Vrui's installation, the directory below
 # must be adapted.
-VRUI_MAKEDIR := /usr/local/share/Vrui-4.5/make
+VRUI_MAKEDIR := /usr/local/share/Vrui-4.6/make
 ifdef DEBUG
   VRUI_MAKEDIR := $(VRUI_MAKEDIR)/debug
 endif
@@ -47,7 +47,7 @@ INSTALLDIR := $(PWD)
 # clobbering each other. The value should be identical to the
 # major.minor version number found in VERSION in the root package
 # directory.
-VERSION = 2.5
+VERSION = 2.6
 
 # Set up resource directories: */
 CONFIGDIR = etc/SARndbox-$(VERSION)
@@ -70,8 +70,6 @@ SHAREINSTALLDIR = $(INSTALLDIR)/$(RESOURCEDIR)
 ########################################################################
 # Specify additional compiler and linker flags
 ########################################################################
-
-CFLAGS += -Wall -pedantic
 
 ########################################################################
 # List common packages used by all components of this project
